tests/snapshots/snapshots__cpu_component_snapshot.snap
---
source: tests/snapshots.rs
assertion_line: 16
expression: t.backend()
---
"┌ CPU ─────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│█                                                                             │"
"│█████████████████████████████████ c0   42.0%                                  │"
"│██████████████                    c1   18.0%                                  │"
"│██████████████████████████████████c2   75.0% ██████████████                   │"
"│████                              c3    5.0%                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
