tests/snapshots/snapshots__mem_component_snapshot.snap
---
source: tests/snapshots.rs
assertion_line: 25
expression: t.backend()
---
"┌ MEM ─────────────────────────────────────────────────────┐"
"│█████████████████RAM  6.0 GiB / 16.0 GiB                  │"
"│                    SWAP 0 B / 4.0 GiB                    │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
