tests/snapshots/snapshots__status_bar_snapshot_macos.snap
---
source: tests/snapshots.rs
expression: t.backend()
---
"┌ dev-box ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│up 3d 4h 0m  load: 1.24 0.98 0.87                                                                  2026-03-25 12:00:00│"
"│cpu  —                                                                                                                │"
"│tasks  4 total  1 running  3 sleeping  0 stopped  0 zombie                                                            │"
"│███████████                 RAM 6.0G/16.0G  free 2.1G  active 5.8G  inactive 2.3G  wired 1.6G  compressed 1.4G        │"
"│                            SWAP 0B/4.0G  free 4.0G                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
